--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 TWITCH_USERNAME = pastebinguy
-TWITCH_PASSWORD = oauth:ucydxq2u7t14k892owjwg2ukbxb7aq
+TWITCH_OAUTH_TOKEN = oauth:ucydxq2u7t14k892owjwg2ukbxb7aq
