--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-TWITCH_USERNAME = 
-TWITCH_OAUTH_TOKEN = 
+TWITCH_USERNAME = pastebinguy
+TWITCH_OAUTH_TOKEN = xmcahm6a7w8vbir5wr78xnfs2pfpll
+
+Host = pastebinguydatabase.czqsiyu0ujhy.sa-east-1.rds.amazonaws.com
+User = flamingo_lindo
+Password = pastebinguysenha123
+Database = pastebinguyDataBase
