--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
+    "har-validator": "^5.1.5",
+    "pg": "^8.11.3",
     "puppeteer": "^21.6.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "tmi.js": "^1.8.5"
+    "tmi.js": "^1.8.5",
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   }
 }
