--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-TWITCH_USERNAME = pastebinguy
-TWITCH_OAUTH_TOKEN = xmcahm6a7w8vbir5wr78xnfs2pfpll
+TWITCH_USERNAME = 
+TWITCH_OAUTH_TOKEN = 
 
-Host = pastebinguydatabase.czqsiyu0ujhy.sa-east-1.rds.amazonaws.com
-User = flamingo_lindo
-Password = pastebinguysenha123
-Database = pastebinguyDataBase
+Host = 
+User = 
+Password = 
+Database = 
